--- a/src/app/core/components/sidenav/components/header/components/date-view/components/year-view/year-view.component.scss
+++ b/src/app/core/components/sidenav/components/header/components/date-view/components/year-view/year-view.component.scss
@@ -2,6 +2,6 @@
     @apply relative;
     
     .month-label.active {
-        @apply bg-gray-100 dark:bg-gray-700;
+        @apply bg-gray-100 dark:bg-hover-dark
     }
 }
