--- a/src/app/shared/fin-ui/fin-transaction-modal/fin-transaction-modal.component.html
+++ b/src/app/shared/fin-ui/fin-transaction-modal/fin-transaction-modal.component.html
@@ -1,9 +1,16 @@
 <div class="flex justify-between items-center" [class.expanded]="expanded">
-    <h2 class="text-xl font-semibold flex items-center justify-center cursor-pointer transition-all duration-300 hover:brightness-110" [matMenuTriggerFor]="menu">
-      <mat-icon class="material-icons-outlined mr-2" [class]="operation === operations.EXPENSE ? 'rotate text-error' : 'text-success'">{{ icon }}</mat-icon>
-      {{ title }}
-      <mat-icon class="material-icons-outlined ml-1" style="width: 20px; height: 20px; font-size: 20px;">keyboard_arrow_down</mat-icon>
-    </h2>
+    @if (data?.id) {
+      <h2 class="text-xl font-semibold flex items-center justify-center">
+        <mat-icon class="material-icons-outlined mr-2" [class]="operation === operations.EXPENSE ? 'rotate text-error' : 'text-success'">{{ icon }}</mat-icon>
+        {{ title }}
+      </h2>
+    } @else {
+      <h2 class="text-xl font-semibold flex items-center justify-center cursor-pointer transition-all duration-300 hover:brightness-110" [matMenuTriggerFor]="menu">
+        <mat-icon class="material-icons-outlined mr-2" [class]="operation === operations.EXPENSE ? 'rotate text-error' : 'text-success'">{{ icon }}</mat-icon>
+        {{ title }}
+        <mat-icon class="material-icons-outlined ml-1" style="width: 20px; height: 20px; font-size: 20px;">keyboard_arrow_down</mat-icon>
+      </h2>
+    }
     <mat-menu #menu="matMenu">
       <button mat-menu-item (click)="changeOperation(operations.INCOME)">
           <mat-icon class="material-icons-outlined success">show_chart</mat-icon>
@@ -18,7 +25,7 @@
           <span>Despesa no cartão &nbsp;&nbsp;&nbsp;</span>
       </button>
     </mat-menu>
-    <span class="cursor-pointer flex items-center justify-center rounded-full p-3 w-2 h-2 duration-200 hover:bg-hover-dark">
+    <span class="cursor-pointer flex items-center justify-center rounded-full p-3 w-2 h-2 duration-200 hover:bg-gray-200 dark:hover:bg-hover-dark">
       <button (click)="close()" class="focus:outline-none">&times;</button>
     </span>
   </div>
@@ -34,34 +41,34 @@
           <fin-select label="Forma de pagamento" name="paymentMethod" [formGroup]="formGroup" controlName="paymentMethod" [items]="paymentMethods" displayProperty="name" required />
         </div>
         
-        <div class="grid grid-cols-2 gap-4">
+        <div [class]="expanded && formGroup.get('type')?.value === types.IN_INSTALLMENTS ? 'grid-cols-1' : 'grid grid-cols-2 gap-4'">
           <fin-autocomplete label="Conta bancária" [formGroup]="formGroup" [items]="bankAccounts" displayProperty="name" controlName="bankAccount" (addNewItem)="createNewBankAccount($event)" />
           <fin-autocomplete label="Categoria" [formGroup]="formGroup" [items]="categories" displayProperty="name" controlName="category" (addNewItem)="createNewCategory($event)" />
         </div>
 
       </div>
-      <div class="w-full" *ngIf="expanded">
+      <div class="w-[90%]" *ngIf="expanded">
         <fin-textarea label="Notas" placeholder="Comprado no dia da praia" name="notes" formControlName="notes" />
 
-        <label class="checkbox">
+        <label class="checkbox" style="margin-top: 2px;">
           <div class="icon">
             <mat-icon class="material-symbols-outlined">keep</mat-icon>
             <span>Transação fixa</span>
           </div>
           <input type="checkbox" [checked]="formGroup.get('type')?.value === types.RECURRENT" (change)="changeType($event, types.RECURRENT)" class="sr-only peer">
-          <div class="button peer peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white peer-checked:bg-primary"></div>
+          <div class="checkbox-button peer peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white peer-checked:bg-primary"></div>
         </label>
         
-        <label class="checkbox">
+        <label class="checkbox" style="margin-top: 4px;">
           <div class="icon">
             <mat-icon class="material-symbols-outlined">replay</mat-icon>
             <span>Transação parcelada</span>
           </div>
           <input type="checkbox" [checked]="formGroup.get('type')?.value === types.IN_INSTALLMENTS" (change)="changeType($event, types.IN_INSTALLMENTS)" class="sr-only peer">
-          <div class="button peer peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white peer-checked:bg-primary"></div>
+          <div class="checkbox-button peer peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white peer-checked:bg-primary"></div>
         </label>
 
-        <fin-input *ngIf="formGroup.get('type')?.value === types.IN_INSTALLMENTS" type="number" label="Parcelas" placeholder="12" name="date" formControlName="date" required />
+        <fin-input *ngIf="formGroup.get('type')?.value === types.IN_INSTALLMENTS" type="number" label="Parcelas" placeholder="12" name="date" formControlName="installments" required />
       </div>
     </section>
 
@@ -71,7 +78,14 @@
       <mat-icon class="material-symbols-outlined">{{ expanded ? "chevron_left" : "chevron_right" }}</mat-icon>
     </div>
   
-    <div class="flex justify-end mt-6">
+    <div class="flex justify-end items-center mt-8 gap-8">
+      <label class="flex items-center gap-2">
+        <span class="text-sm font-medium text-text dark:text-text-dark">
+          {{ operation === operations.EXPENSE ? "Pago?" : "Recebido?" }}
+        </span>
+        <input type="checkbox" [checked]="formGroup.get('status')?.value === status.PAID" (change)="changeStatus()" class="sr-only peer">
+        <div class="checkbox-button peer peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white peer-checked:bg-primary"></div>
+      </label>
       <fin-button (click)="submit()">Enviar</fin-button>
     </div>
   </form>
