--- a/src/app/views/categories/components/bank-account-modal/category-modal.component.html
+++ b/src/app/views/categories/components/bank-account-modal/category-modal.component.html
@@ -1,6 +1,6 @@
 <div class="flex justify-between items-center text-start">
   <h2 class="text-xl font-semibold">{{ formGroup.get('categoryId')?.value ? 'Atualizar categoria' : 'Nova categoria' }}</h2>
-  <span class="cursor-pointer flex items-center justify-center rounded-full p-3 w-2 h-2 duration-200 hover:bg-hover-dark">
+  <span class="cursor-pointer flex items-center justify-center rounded-full p-3 w-2 h-2 duration-200 hover:bg-gray-200 dark:hover:bg-hover-dark">
     <button (click)="close()" class="focus:outline-none">&times;</button>
   </span>
 </div>
