--- a/src/app/views/dashboard/dashboard.component.scss
+++ b/src/app/views/dashboard/dashboard.component.scss
@@ -2,6 +2,7 @@
     @apply flex w-full h-full p-6 gap-6;
 
     .card {
-        @apply bg-sidenav dark:bg-sidenav-dark border border-gray-200 dark:border-hover rounded-xl w-full text-text dark:text-text-dark;
+        @apply overflow-y-hidden
+        bg-sidenav dark:bg-sidenav-dark border border-gray-200 dark:border-hover rounded-xl w-full text-text dark:text-text-dark;
     }
 }
