--- a/src/app/core/components/sidenav/components/header/components/date-view/components/month-view/month-view.component.html
+++ b/src/app/core/components/sidenav/components/header/components/date-view/components/month-view/month-view.component.html
@@ -1,11 +1,15 @@
 <div class="flex items-center justify-center gap-2 cursor-default">
     <chevron (click)="dateControl.previousMonth()" direction="left"></chevron>
-    <span (click)="dateControl.changeView()" class="flex items-center justify-center border-2 text-sm border-primary text-primary py-1 px-2 rounded-3xl
+    <span (click)="dateControl.changeView()" class="flex items-center justify-center border-2 text-sm border-primary text-primary py-1 px-2 rounded-3xl w-[140px]
         hover:bg-gray-100
         dark:border-text-dark dark:text-text-dark dark:hover:bg-hover-dark">
         <mat-icon class="text-base mb-0.5 mr-1">calendar_month</mat-icon>
         <b class="mr-0.5">{{ dateControl.getMonthLabel() | async }}</b>
         {{ dateControl.year | async }}
     </span>
-    <chevron (click)="dateControl.nextMonth()" direction="right"></chevron>
+    @if(showNextMonth) {
+        <chevron (click)="dateControl.nextMonth()" direction="right"></chevron>
+    } @else {
+        <chevron [disabled]="true" direction="right"></chevron>
+    }
 </div>
