--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,12 +1,12 @@
-<section class="w-[65%] flex flex-col gap-4">
-    <div class="flex gap-4 h-[17%]">
+<section class="w-[65%] max-2xl:w-full flex flex-col gap-4">
+    <div class="flex gap-4">
         @if (report) {
             <balance-card [balanceReport]="report.totalBalance" class="card col-span-2" />
             <incomes-card [incomesReport]="report.income" class="card"/>
             <expenses-card [expensesReport]="report.expenses" class="card"/>
         }
     </div>
-    <div class="card flex gap-4 h-[83%]">
+    <div class="card flex gap-4 h-full">
 
         <div class="fin-table" style="padding: 0;">
             @if(bankAccountTransactions.length > 0) {
@@ -17,8 +17,8 @@
                             <th>Data</th>
                             <th>Descrição</th>
                             <th>Valor</th>
-                            <th>Conta</th>
-                            <th class="text-center">Recebido/Pago</th>
+                            <th class="max-xl:hidden">Conta</th>
+                            <th class="text-center max-xl:hidden">Recebido/Pago</th>
                             <th></th>
                         </thead>
                         <tbody>
@@ -26,22 +26,29 @@
                                 <tr>
                                     <td style="padding-top: 0.5rem; padding-bottom: 0.5rem"><fin-category-icon [category]="transaction.category" /></td>
                                     <td>{{ transaction.date | date:'dd/MM/yyyy' }}</td>
-                                    <td>{{ transaction.description }}</td>
-                                    <td [class]="transaction.operation === operations.EXPENSE ? 'expense' : 'income'">{{ transaction.amount | currency: 'BRL' }}</td>
-                                    <td>{{ transaction.bankAccount.name }}</td>
-                                    <td class="text-center">
+                                    <td>
+                                        {{ transaction.description }}
+                                    </td>
+                                    <td [class]="transaction.operation === operations.EXPENSE ? 'expense' : 'income'">
+                                        {{ transaction.amount | currency: 'BRL' }}
+                                        @if (transaction.recurrency.installments && transaction.recurrency.installment) {
+                                            <span class="text-text/60 dark:text-text-dark/60 text-xs">({{ transaction.recurrency.installment }}/{{ transaction.recurrency.installments }})</span>
+                                        }
+                                    </td>
+                                    <td class="max-xl:hidden">{{ transaction.bankAccount.name }}</td>
+                                    <td class="text-center max-xl:hidden">
                                         <label class="checkbox" style="width: fit-content;">
                                             <input type="checkbox" [checked]="transaction.status === transactionStatus.PAID" class="sr-only peer">
                                             <div 
                                             (click)="changeStatus(transaction.bankAccountTransactionId)"
-                                            class="button peer peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white peer-checked:bg-primary"></div>
+                                            class="checkbox-button peer peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white peer-checked:bg-primary"></div>
                                           </label>
                                     </td>
                 
                                     <td class="more"><mat-icon [matMenuTriggerFor]="menu" class="material-symbols-outlined">more_vert</mat-icon></td>
                                     <mat-menu #menu="matMenu">
-                                        <button mat-menu-item>
-                                            <mat-icon (click)="update(transaction)" class="material-symbols-outlined">edit</mat-icon>
+                                        <button (click)="update(transaction)" mat-menu-item>
+                                            <mat-icon class="material-symbols-outlined">edit</mat-icon>
                                             <span>Editar</span>
                                         </button>
                                         <button (click)="delete(transaction)" mat-menu-item>
@@ -63,7 +70,7 @@
     </div>
 </section>
 
-<section class="w-[35%] flex flex-col gap-4">
+<section class="w-[35%] max-2xl:w-full flex flex-col gap-4">
     <div class="card flex gap-4 h-[50%]">
         a
     </div>
