feat: cc transactions

--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -15,7 +15,7 @@
                         <mat-icon class="material-icons-outlined error">show_chart</mat-icon>
                         <span>Despesa</span>
                     </button>
-                    <button mat-menu-item>
+                    <button mat-menu-item (click)="createCreditCardTransaction()">
                         <mat-icon class="material-icons-outlined">credit_card</mat-icon>
                         <span>Despesa no cartão &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                     </button>
