--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<section class="w-[65%] max-2xl:w-full flex flex-col gap-4">
+<section class="w-[60%] max-2xl:w-full flex flex-col gap-4">
     <div class="flex gap-4">
         @if (report) {
             <balance-card [balanceReport]="report.totalBalance" class="card col-span-2" />
@@ -6,75 +6,9 @@
             <expenses-card [expensesReport]="report.expenses" class="card"/>
         }
     </div>
-    <div class="card flex gap-4 h-full">
-
-        <div class="fin-table" style="padding: 0;">
-            @if(bankAccountTransactions.length > 0) {
-                <section class="table-section">
-                    <table>
-                        <thead>
-                            <th></th>
-                            <th>Data</th>
-                            <th>Descrição</th>
-                            <th>Valor</th>
-                            <th class="max-xl:hidden">Conta</th>
-                            <th class="text-center max-xl:hidden">Recebido/Pago</th>
-                            <th></th>
-                        </thead>
-                        <tbody>
-                            @for (transaction of bankAccountTransactions; track transaction.bankAccountTransactionId) {
-                                <tr>
-                                    <td style="padding-top: 0.5rem; padding-bottom: 0.5rem"><fin-category-icon [category]="transaction.category" /></td>
-                                    <td>{{ transaction.date | date:'dd/MM/yyyy' }}</td>
-                                    <td>
-                                        {{ transaction.description }}
-                                    </td>
-                                    <td [class]="transaction.operation === operations.EXPENSE ? 'expense' : 'income'">
-                                        {{ transaction.amount | currency: 'BRL' }}
-                                        @if (transaction.recurrency.installments && transaction.recurrency.installment) {
-                                            <span class="text-text/60 dark:text-text-dark/60 text-xs">({{ transaction.recurrency.installment }}/{{ transaction.recurrency.installments }})</span>
-                                        }
-                                    </td>
-                                    <td class="max-xl:hidden">{{ transaction.bankAccount.name }}</td>
-                                    <td class="text-center max-xl:hidden">
-                                        <label class="checkbox" style="width: fit-content;">
-                                            <input type="checkbox" [checked]="transaction.status === transactionStatus.PAID" class="sr-only peer">
-                                            <div 
-                                            (click)="changeStatus(transaction.bankAccountTransactionId)"
-                                            class="checkbox-button peer peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white peer-checked:bg-primary"></div>
-                                          </label>
-                                    </td>
-                
-                                    <td class="more"><mat-icon [matMenuTriggerFor]="menu" class="material-symbols-outlined">more_vert</mat-icon></td>
-                                    <mat-menu #menu="matMenu">
-                                        <button (click)="update(transaction)" mat-menu-item>
-                                            <mat-icon class="material-symbols-outlined">edit</mat-icon>
-                                            <span>Editar</span>
-                                        </button>
-                                        <button (click)="delete(transaction)" mat-menu-item>
-                                            <mat-icon class="material-symbols-outlined">delete</mat-icon>
-                                            <span>Apagar</span>
-                                        </button>
-                                    </mat-menu>
-                                </tr>
-                              }
-                        </tbody>
-                    </table>
-                </section>
-            } @else {
-                <h1 class="mt-4">Sem registros.</h1>
-            }
-            
-        </div>
-          
-    </div>
+    <div class="card flex gap-4 h-full"><bank-account-transactions class="w-full" /></div>
 </section>
 
-<section class="w-[35%] max-2xl:w-full flex flex-col gap-4">
-    <div class="card flex gap-4 h-[50%]">
-        a
-    </div>
-    <div class="card flex gap-4 h-[50%]">
-        a
-    </div>
+<section class="w-[40%] max-2xl:w-full flex flex-col gap-4">
+    <div class="card flex gap-4 h-full"><credit-card-transactions class="w-full" /></div>
 </section>
