feat: reports base

--- a/src/app/core/components/sidenav/components/header/header.component.html
+++ b/src/app/core/components/sidenav/components/header/header.component.html
@@ -1,3 +1,5 @@
+<!-- eslint-disable @angular-eslint/template/interactive-supports-focus -->
+<!-- eslint-disable @angular-eslint/template/click-events-have-key-events -->
 <header class="flex items-center justify-between py-4 px-6 bg-transparent h-[68px]">
     <div>
         <ng-content></ng-content>
