--- a/src/theme/_utilitary-classes.scss
+++ b/src/theme/_utilitary-classes.scss
@@ -13,3 +13,61 @@
 .income {
     @apply text-success;
 }
+
+.cc-nubank        { @apply bg-gradient-to-r from-purple-500 to-purple-800; }
+.cc-inter         { @apply bg-gradient-to-r from-orange-500 to-orange-700; }
+.cc-bb            { @apply bg-gradient-to-r from-blue-500 to-blue-700; }
+.cc-bradesco      { @apply bg-gradient-to-r from-red-500 to-red-700; }
+.cc-caixa         { @apply bg-gradient-to-r from-red-600 to-red-800; }
+.cc-hipercard     { @apply bg-gradient-to-r from-pink-500 to-pink-700; }
+.cc-itau          { @apply bg-gradient-to-r from-orange-400 to-orange-600; }
+.cc-santander     { @apply bg-gradient-to-r from-red-400 to-red-600; }
+.cc-iti           { @apply bg-gradient-to-r from-blue-400 to-blue-600; }
+.cc-mercadopago   { @apply bg-gradient-to-r from-yellow-500 to-yellow-700; }
+.cc-pagbank       { @apply bg-gradient-to-r from-purple-400 to-purple-600; }
+.cc-pagseguro     { @apply bg-gradient-to-r from-green-500 to-green-700; }
+.cc-paypal        { @apply bg-gradient-to-r from-blue-500 to-blue-700; }
+.cc-picpay        { @apply bg-gradient-to-r from-green-400 to-green-600; }
+.cc-amex          { @apply bg-gradient-to-r from-blue-600 to-blue-800; }
+.cc-mastercard    { @apply bg-gradient-to-r from-red-500 to-orange-500; }
+.cc-visa          { @apply bg-gradient-to-r from-blue-500 to-blue-700; }
+.cc-diners        { @apply bg-gradient-to-r from-green-500 to-green-700; }
+.cc-elo           { @apply bg-gradient-to-r from-blue-500 to-pink-500; }
+.cc-btg           { @apply bg-gradient-to-r from-red-700 to-red-900; }
+.cc-pan           { @apply bg-gradient-to-r from-pink-500 to-pink-700; }
+.cc-neon          { @apply bg-gradient-to-r from-pink-500 to-orange-500; }
+.cc-next          { @apply bg-gradient-to-r from-green-400 to-green-600; }
+.cc-c6bank        { @apply bg-gradient-to-r from-pink-400 to-pink-600; }
+.cc-agibank       { @apply bg-gradient-to-r from-teal-500 to-teal-700; }
+.cc-digio         { @apply bg-gradient-to-r from-yellow-500 to-yellow-700; }
+.cc-recargapay    { @apply bg-gradient-to-r from-blue-500 to-blue-700; }
+.cc-rico          { @apply bg-gradient-to-r from-orange-500 to-orange-700; }
+.cc-safra         { @apply bg-gradient-to-r from-red-500 to-red-700; }
+.cc-sicoob        { @apply bg-gradient-to-r from-green-500 to-green-700; }
+.cc-sicredi       { @apply bg-gradient-to-r from-green-600 to-green-800; }
+.cc-sodexo        { @apply bg-gradient-to-r from-orange-500 to-orange-700; }
+.cc-sofisa        { @apply bg-gradient-to-r from-blue-500 to-blue-700; }
+.cc-xp            { @apply bg-gradient-to-r from-purple-500 to-purple-700; }
+.cc-alelo         { @apply bg-gradient-to-r from-red-500 to-red-700; }
+.cc-flash         { @apply bg-gradient-to-r from-blue-500 to-blue-700; }
+.cc-will          { @apply bg-gradient-to-r from-blue-500 to-blue-700; }
+.cc-amedigital    { @apply bg-gradient-to-r from-red-500 to-red-700; }
+.cc-bmg           { @apply bg-gradient-to-r from-blue-500 to-blue-700; }
+.cc-brb           { @apply bg-gradient-to-r from-blue-500 to-blue-700; }
+.cc-brde          { @apply bg-gradient-to-r from-green-500 to-green-700; }
+.cc-bs2           { @apply bg-gradient-to-r from-purple-500 to-purple-700; }
+.cc-amazonia      { @apply bg-gradient-to-r from-green-500 to-green-700; }
+.cc-cacique       { @apply bg-gradient-to-r from-blue-500 to-blue-700; }
+.cc-votorantim    { @apply bg-gradient-to-r from-orange-500 to-orange-700; }
+.cc-nordeste      { @apply bg-gradient-to-r from-blue-500 to-blue-700; }
+.cc-banese        { @apply bg-gradient-to-r from-green-500 to-green-700; }
+.cc-banestes      { @apply bg-gradient-to-r from-green-500 to-green-700; }
+.cc-banif         { @apply bg-gradient-to-r from-blue-500 to-blue-700; }
+.cc-banpara       { @apply bg-gradient-to-r from-blue-500 to-blue-700; }
+.cc-banrisul      { @apply bg-gradient-to-r from-blue-500 to-blue-700; }
+.cc-bbm           { @apply bg-gradient-to-r from-red-500 to-red-700; }
+.cc-cetelem       { @apply bg-gradient-to-r from-blue-500 to-blue-700; }
+.cc-citibank      { @apply bg-gradient-to-r from-blue-500 to-blue-700; }
+.cc-cruzeirodosul { @apply bg-gradient-to-r from-purple-500 to-purple-700; }
+.cc-digiplus      { @apply bg-gradient-to-r from-blue-500 to-blue-700; }
+.cc-other         { @apply bg-gradient-to-r from-gray-600 to-gray-800; }
