--- a/src/app/views/dashboard/dashboard.component.scss
+++ b/src/app/views/dashboard/dashboard.component.scss
@@ -1,5 +1,5 @@
 :host {
-    @apply flex w-full h-full p-6 gap-6;
+    @apply flex w-full h-full p-6 gap-6 max-lg:flex-col;
 
     .card {
         @apply overflow-y-hidden
