--- a/src/theme/_material.scss
+++ b/src/theme/_material.scss
@@ -1,5 +1,6 @@
 @use '@angular/material' as mat;
-@include mat.core();
+@include mat.elevation-classes();
+@include mat.app-background();
 $finance-angular-primary: mat.m2-define-palette(mat.$m2-indigo-palette);
 $finance-angular-accent: mat.m2-define-palette(mat.$m2-pink-palette, A200, A100, A400);
 $finance-angular-warn: mat.m2-define-palette(mat.$m2-red-palette);
